@@ -3,6 +3,7 @@
 # $Header: $
 
 EAPI="4"
+
 inherit eutils
 
 DESCRIPTION="Excellent text file viewer, optionally with additional selection feature"
@@ -17,7 +18,7 @@ SRC_URI="http://www.greenwoodsoftware.com/less/${P}.tar.gz
 
 LICENSE="|| ( GPL-3 BSD-2 )"
 SLOT="0"
-KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~sparc-fbsd ~x86-fbsd"
+KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~ppc-aix ~amd64-fbsd ~sparc-fbsd ~x86-fbsd ~x64-freebsd ~x86-freebsd ~hppa-hpux ~ia64-hpux ~x86-interix ~amd64-linux ~ia64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~m68k-mint ~sparc-solaris ~sparc64-solaris ~x64-solaris ~x86-solaris"
 IUSE="+less-select pcre original-gentoo unicode"
 
 DEPEND=">=app-misc/editor-wrapper-3
@@ -55,7 +56,7 @@ src_configure() {
 
 	econf \
 		--with-regex=${regex} \
-		--with-editor=/usr/libexec/editor
+		--with-editor="${EPREFIX}"/usr/libexec/editor
 }
 
 src_compile() {
@@ -70,8 +71,8 @@ src_install() {
 	local a
 	default
 
-	dobin code2color || die "dobin"
-	newbin "${FILESDIR}"/lesspipe.sh lesspipe || die "newbin"
+	dobin code2color
+	newbin "${FILESDIR}"/lesspipe.sh lesspipe
 	dosym lesspipe /usr/bin/lesspipe.sh
 	if use original-gentoo
 	then	a="-R -M --shift 5"
