@@ -2,6 +2,11 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*less-449.ebuild (28 Jun 2012)
+
+  28 Jun 2012; Martin Väth <martin@mvath.de>
+  Bump less version.
+
 *less-445-r1.ebuild (10 Nov 2011)
 
   12 May 2012; Martin Väth <martin@mvath.de>
